--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+  <!-- google maps sdk -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDthe3JH0xpdk1dQAd6RqCNTyV6vrSOZqM" async defer></script>
+
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
